Stop nsCocoaWindow::Show() from crashing on "Error (1000) creating CGSWindow" errors. b=470864 r=josh sr=roc